converts up to 999

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <input class="font-size" type="text" placeholder="Enter number...">
+    <input class="font-size" type="number" placeholder="Enter number...">
     
     <p class="font-size">Output:</p>
 </body>
