works up to 999999999

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <input class="font-size" type="number" placeholder="Enter number...">
     
-    <p class="font-size">Output:</p>
+    <p>Output:</p>
 </body>
 <script src="app.js"></script>
 </html>
